[tool.black]
target-version = ['py38']
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "stimpy"
version = "0.1.0"
description = "A PsychoPy wrapper to create moving visual stimuli without loops."
authors = ["Ka Chung Lam <kclamar@connect.ust.hk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kclamar/stimpy"
repository = "https://github.com/kclamar/stimpy"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
PsychoPy = "^2021.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
